scrollbar fix

--- a/css/commponents/_collection.scss
+++ b/css/commponents/_collection.scss
@@ -1,4 +1,5 @@
 .collection {
+  overflow-x: overlay;
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
   &::-webkit-scrollbar {
@@ -33,6 +34,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
+    scrollbar-width: none;
   }
   &__item {
     position: relative;
@@ -122,7 +124,7 @@
       display: flex;
       gap: 16px;
       overflow: hidden;
-      overflow-x: scroll;
+      overflow-x: overlay;
       &::-webkit-scrollbar {
         width: 0;
         height: 0;
