--- a/css/commponents/_media.scss
+++ b/css/commponents/_media.scss
@@ -1,4 +1,5 @@
 .media {
+  overflow-x: overlay;
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
   &::-webkit-scrollbar {
@@ -39,7 +40,7 @@
       display: flex;
       gap: 0px;
       overflow: hidden;
-      overflow-x: scroll;
+      overflow-x: overlay;
       overflow: -moz-scrollbars-none;
       -ms-overflow-style: none;
       &::-webkit-scrollbar {
